# task-runner-launcher

./: .gitignore  .golangci.yml  .goreleaser.yaml  Cargo.toml  Makefile  README.md  go.mod  go.sum
.github/workflows/: checks.yml  notify-pr-status.yml  release.yml
cmd/launcher/: main.go
docs/: development.md  lifecycle.md  release.md  setup.md
internal/auth/: handshake.go  token_exchange.go
internal/commands/: launch.go
internal/config/: config.go  config_test.go  validate_url.go  validate_url_test.go
internal/env/: env.go  env_test.go
internal/errorreporting/: sentry.go  sentry_test.go
internal/errs/: errs.go
internal/http/: check_until_broker_ready.go  check_until_broker_ready_test.go  fetch_grant_token.go  fetch_grant_token_test.go  healthcheck_server.go  healthcheck_server_test.go  manage_runner_health.go  manage_runner_health_test.go  monitor_runner_health.go  wait_for_n8n.go
internal/logs/: logger.go  logger_test.go  runner_writers.go  runner_writers_test.go
internal/retry/: retry.go  retry_test.go
internal/ws/: handshake.go  handshake_test.go
src/: main.rs
