[package]
name = "task-runner-launcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.18", features = ["derive"] }
libc = "0.2.158"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"

[features]
secure-mode = []
default = ["secure-mode"]
